# pipes_test

./: .gitignore  CMakeLists.txt  process.cpp  script.bat  sinc.cpp  source.cpp
prog_sinc/: CMakeLists.txt  prog_sinc.cpp
prog_src/: CMakeLists.txt  prog_src.cpp
